# edubot-matrix

./: .gitignore  .pre-commit-config.yaml  README.md  init.py  pyproject.toml
edubot_matrix/: bot_commands.py  callbacks.py  chat_functions.py  config.py  config.yaml  errors.py  g.py  main.py  message_responses.py  rss.py  sample.config.yaml  storage.py  types.py  utils.py
matrix/: bot_commands.py  callbacks.py  chat_functions.py  config.py  config.yaml  g.py  main.py  message_responses.py  sample.config.yaml  storage.py
